--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
+      <h2>Addition</h2>
       <form id="add">
         <div class="form-group">
           <label for="add1">1st number:</label>
@@ -19,11 +20,55 @@
           <label for="add2">2nd number:</label>
           <input id="add2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Add!</button>
+        <button type="submit" class="btn btn-secondary">Add!</button>
       </form>
       <div id="output">
-
       </div>
+
+      <h2>Subtraction</h2>
+      <form id="subtract">
+        <div class="form-group">
+          <label for="subtract1">1st number:</label>
+          <input id="subtract1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="subtract2">2nd number:</label>
+          <input id="subtract2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-secondary">Subtract!</button>
+      </form>
+      <div id="output">
+      </div>
+
+       <h2>Multiplication</h2>
+        <form id="multiply">
+          <div class="form-group">
+            <label for="multiply1">1st number:</label>
+            <input id="multiply1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="multiply2">2nd number:</label>
+            <input id="multiply2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-secondary">Multiply!</button>
+        </form>
+        <div id="output">
+        </div>
+
+        <h2>Division</h2>
+          <form id="divide">
+            <div class="form-group">
+              <label for="divide1">1st number:</label>
+              <input id="divide1" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label for="divide2">2nd number:</label>
+              <input id="divide2" class="form-control" type="text">
+            </div>
+            <button type="submit" class="btn btn-secondary">Divide!</button>
+          </form>
+          <div id="output">
+          </div>
     </div>
   </body>
 </html>
