correct syntax in event listeners for calculator functions in js

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </div>
         <button type="submit" class="btn btn-secondary">Add!</button>
       </form>
-      <div id="output">
-      </div>
+      <div id="output-add"></div>
 
       <h2>Subtraction</h2>
       <form id="subtract">
@@ -37,38 +36,36 @@
         </div>
         <button type="submit" class="btn btn-secondary">Subtract!</button>
       </form>
-      <div id="output">
-      </div>
+      <div id="output-subtract"></div>
 
-       <h2>Multiplication</h2>
-        <form id="multiply">
-          <div class="form-group">
-            <label for="multiply1">1st number:</label>
-            <input id="multiply1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="multiply2">2nd number:</label>
-            <input id="multiply2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn btn-secondary">Multiply!</button>
-        </form>
-        <div id="output">
+     <h2>Multiplication</h2>
+     <form id="multiply">
+       <div class="form-group">
+         <label for="multiply1">1st number:</label>
+         <input id="multiply1" class="form-control" type="text">
+       </div>
+       <div class="form-group">
+         <label for="multiply2">2nd number:</label>
+         <input id="multiply2" class="form-control" type="text">
+       </div>
+       <button type="submit" class="btn btn-secondary">Multiply!</button>
+     </form>
+     <div id="output-multiply"></div>
+
+      <h2>Division</h2>
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
         </div>
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-secondary">Divide!</button>
+      </form>
+      <div id="output-divide"></div>
 
-        <h2>Division</h2>
-          <form id="divide">
-            <div class="form-group">
-              <label for="divide1">1st number:</label>
-              <input id="divide1" class="form-control" type="text">
-            </div>
-            <div class="form-group">
-              <label for="divide2">2nd number:</label>
-              <input id="divide2" class="form-control" type="text">
-            </div>
-            <button type="submit" class="btn btn-secondary">Divide!</button>
-          </form>
-          <div id="output">
-          </div>
     </div>
   </body>
 </html>
