--- a/index.html
+++ b/index.html
@@ -1,71 +1,120 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Calculator</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/scripts.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Calculator</h1>
-      <h2>Addition</h2>
-      <form id="add">
-        <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-secondary">Add!</button>
-      </form>
-      <div id="output-add"></div>
-
-      <h2>Subtraction</h2>
-      <form id="subtract">
-        <div class="form-group">
-          <label for="subtract1">1st number:</label>
-          <input id="subtract1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="subtract2">2nd number:</label>
-          <input id="subtract2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-secondary">Subtract!</button>
-      </form>
-      <div id="output-subtract"></div>
-
-     <h2>Multiplication</h2>
-     <form id="multiply">
-       <div class="form-group">
-         <label for="multiply1">1st number:</label>
-         <input id="multiply1" class="form-control" type="text">
-       </div>
-       <div class="form-group">
-         <label for="multiply2">2nd number:</label>
-         <input id="multiply2" class="form-control" type="text">
-       </div>
-       <button type="submit" class="btn btn-secondary">Multiply!</button>
-     </form>
-     <div id="output-multiply"></div>
-
-      <h2>Division</h2>
-      <form id="divide">
-        <div class="form-group">
-          <label for="divide1">1st number:</label>
-          <input id="divide1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="divide2">2nd number:</label>
-          <input id="divide2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-secondary">Divide!</button>
-      </form>
-      <div id="output-divide"></div>
-
+<head>
+  <title>Calculator</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/scripts.js"></script>
+</head>
+<body>
+  <div class="container">
+    <h1>Calculator</h1>
+    <form id="calculator">
+      <div class="form-group">
+        <label for="input1">1st number:</label>
+        <input id="input1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="input2">2nd number:</label>
+        <input id="input2" class="form-control" type="text">
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          add
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="subtract">
+          subtract
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="multiply">
+          multiply
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="divide">
+          divide
+        </label>
+      </div>
+      <button type="submit" class="btn btn-secondary">Go!</button>
+      <div id="output">
+      </div>
     </div>
-  </body>
+  </form>
+
+</div>
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+ <!-- <h2>Addition</h2>
+<form id="add">
+  <div class="form-group">
+    <label for="add1">1st number:</label>
+    <input id="add1" class="form-control" type="text">
+  </div>
+  <div class="form-group">
+    <label for="add2">2nd number:</label>
+    <input id="add2" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn btn-secondary">Add!</button>
+</form>
+<div id="output-add"></div>
+
+<h2>Subtraction</h2>
+<form id="subtract">
+  <div class="form-group">
+    <label for="subtract1">1st number:</label>
+    <input id="subtract1" class="form-control" type="text">
+  </div>
+  <div class="form-group">
+    <label for="subtract2">2nd number:</label>
+    <input id="subtract2" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn btn-secondary">Subtract!</button>
+</form>
+<div id="output-subtract"></div>
+
+<h2>Multiplication</h2>
+<form id="multiply">
+  <div class="form-group">
+    <label for="multiply1">1st number:</label>
+    <input id="multiply1" class="form-control" type="text">
+  </div>
+  <div class="form-group">
+    <label for="multiply2">2nd number:</label>
+    <input id="multiply2" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn btn-secondary">Multiply!</button>
+</form>
+<div id="output-multiply"></div>
+
+<h2>Division</h2>
+<form id="divide">
+  <div class="form-group">
+    <label for="divide1">1st number:</label>
+    <input id="divide1" class="form-control" type="text">
+  </div>
+  <div class="form-group">
+    <label for="divide2">2nd number:</label>
+    <input id="divide2" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn btn-secondary">Divide!</button>
+</form> --> 
